# Miscellaneous

./: .gitignore
Mandelbrot/: CMakeLists.txt  check_image_equality.sh
Mandelbrot/cuda/: CMakeLists.txt  Color.cuh  Complex.cuh  Mandelbrot.cu  Numeric.cuh  RGBConversions.cuh
Mandelbrot/serial/: CMakeLists.txt  Mandelbrot.cpp
Mandelbrot/tbb/: CMakeLists.txt  Mandelbrot.cpp
Mandelbrot/tbb/grainsize/: get_data.sh  plot.py
